# notebooks

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
data-analysis-and-visualization-with-python/advanced-data-analysis-techniques/: advanced-data-analysis-pandas.ipynb  categorical-data-with-pandas.ipynb  pandas1-large-datasets.ipynb
data-analysis-and-visualization-with-python/analyzing-tabular-data-with-pandas/: 100-pandas-puzzles.ipynb  python-pandas-data-analysis.ipynb
data-analysis-and-visualization-with-python/data-analysis-visualization-practice/: data-analysis-visualization-practice-assignment.ipynb
data-analysis-and-visualization-with-python/exploring-numpy-functions/: zerotoanalyst-numpy-array-operations.ipynb
data-analysis-and-visualization-with-python/numerical-computing-with-numpy/: 100-numpy-exercises.ipynb  python-numerical-computing-with-numpy.ipynb  python-os-and-filesystem.ipynb
data-analysis-and-visualization-with-python/pandas-data-analysis-practice/: zerotodatascience-pandas-practice.ipynb
data-analysis-and-visualization-with-python/visualization-with-matplotlib-seaborn/: dataviz-cheatsheet.ipynb  (+1 more)
data-structures-and-algorithms-in-python/: python-classes-and-linked-lists.ipynb  python-problem-solving-template.ipynb
scripts/: capture_tag.py  clean_notebooks.py  clean_notebooks_complete.py  clean_notebooks_smart.py  download-lesson.py  download-notebook.py  recursive_refresh.py  recursive_tag.py  refresh_tag.py
sql-and-business-intelligence/: ExcelDataAnalysisWorkbook.xlsx  lesson-1-relational-databases-and-sql.ipynb
(+217 files in other folders)
