[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VimYoung", email = "bhaumik2386@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
